--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "canvas": "^2.10.1",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
@@ -116,7 +117,7 @@
     "monaco-editor": "^0.31.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "plotly.js-basic-dist": "^2.13.3",
+    "plotly.js-dist-min": "^2.14.0",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
