--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -40,7 +40,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.9.0",
     "@mui/styles": "^5.9.0",
-    "plotly.js-basic-dist": "^2.11.1",
+    "plotly.js-dist-min": "^2.14.0",
     "react": "^16.13.1 || ^17.0.2",
     "react-dom": "^16.13.1 || ^17.0.2"
   },
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/plotly.js": "2.12.2",
+    "@types/plotly.js": "2.12.5",
     "@types/react": "^17.0.47",
     "cross-env": "^7.0.3"
   },
