--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -5,7 +5,7 @@
   "author": "Hitachi Vantara UI Kit Team",
   "description": "NEXT Design System icons packaged as a set of React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
-  "main": "./bin/index.ts",
+  "main": "./src/index.ts",
   "sideEffects": false,
   "keywords": [
     "hitachi-vantara",
@@ -23,21 +23,22 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "prebuild": "npm run convert",
+    "prebuild": "run-s clean convert",
     "build": "vite build",
     "postbuild": "npx cpy \"sprites\" \"dist\"",
     "optimize": "svgo -r -f assets assets",
-    "preconvert": "npx rimraf bin",
+    "preconvert": "npx rimraf src",
     "convert": "run-s convert:*",
-    "convert:svg": "tsx src/svgToReact.ts dir --input assets --output bin --force",
-    "convert:sprites": "tsx src/svgToSprite.ts dir --input assets --output sprites --force",
-    "convert:copy": "npx cpy \"lib/*\" \"bin\"",
-    "clean": "npx rimraf dist bin sprites package",
+    "convert:svg": "tsx scripts/svgToReact.ts dir --input assets --output src --force",
+    "convert:sprites": "tsx scripts/svgToSprite.ts dir --input assets --output sprites --force",
+    "convert:copy": "npx cpy \"lib/*\" \"src\"",
+    "clean": "npx rimraf dist src sprites package",
     "prepare": "npm run convert",
     "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "peerDependencies": {
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
@@ -45,17 +46,17 @@
     "@hitachivantara/uikit-styles": "^5.16.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "by-node-env": "^2.0.1",
     "cpy-cli": "^4.2.0",
-    "html-to-react": "^1.6.0",
+    "html-to-react": "^1.7.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.3",
-    "svgo": "^3.0.2",
+    "svgo": "^3.1.0",
     "tsx": "^4.6.2",
-    "vite": "^4.3.9",
+    "vite": "^4.5.1",
     "yargs": "^17.7.2"
   },
   "files": [
