--- a/package.json
+++ b/package.json
@@ -36,82 +36,84 @@
     "lab:flow": "node scripts/flow-styles"
   },
   "devDependencies": {
-    "@applitools/eyes-storybook": "^3.41.2",
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
-    "@dnd-kit/core": "^6.0.8",
+    "@applitools/eyes-storybook": "^3.45.1",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
-    "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@mdx-js/react": "^2.3.0",
-    "@mui/material": "^5.13.5",
-    "@playwright/test": "^1.35.0",
-    "@storybook/addon-a11y": "^7.4.1",
-    "@storybook/addon-essentials": "^7.4.1",
-    "@storybook/addon-links": "^7.4.1",
-    "@storybook/core-common": "^7.4.1",
-    "@storybook/react": "^7.4.1",
-    "@storybook/react-vite": "^7.4.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/leaflet": "^1.9.4",
-    "@types/lodash": "^4.14.195",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "@vitejs/plugin-react": "^4.1.1",
+    "@mui/material": "^5.14.20",
+    "@playwright/test": "^1.40.1",
+    "@storybook/addon-a11y": "^7.6.4",
+    "@storybook/addon-essentials": "^7.6.4",
+    "@storybook/addon-links": "^7.6.4",
+    "@storybook/addons": "^7.6.4",
+    "@storybook/core-common": "^7.6.4",
+    "@storybook/react": "^7.6.4",
+    "@storybook/react-vite": "^7.6.4",
+    "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^0.34.6",
-    "arquero": "^5.2.0",
+    "add": "^2.0.6",
+    "arquero": "^5.3.0",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
-    "echarts": "^5.4.2",
+    "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
-    "eslint": "^8.42.0",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-ssr-friendly": "^1.2.0",
-    "formik": "^2.4.2",
+    "eslint-plugin-ssr-friendly": "^1.3.0",
+    "formik": "^2.4.5",
     "html-react-parser": "^3.0.16",
     "jsdom": "^21.1.2",
     "leaflet": "^1.9.4",
-    "lerna": "^7.1.1",
-    "lint-staged": "^13.2.2",
+    "lerna": "^7.4.2",
+    "lint-staged": "^13.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.0",
-    "react-hook-form": "^7.48.2",
+    "react-google-charts": "^4.0.1",
+    "react-hook-form": "^7.49.0",
     "react-leaflet": "^4.2.1",
-    "reactflow": "^11.9.4",
+    "reactflow": "^11.10.1",
     "remark-gfm": "^3.0.1",
-    "storybook": "^7.4.1",
+    "storybook": "^7.6.4",
     "storybook-a11y-report": "^0.0.20",
-    "swr": "^2.2.2",
+    "swr": "^2.2.4",
     "typescript": "^4.9.5",
     "uid": "^2.0.2",
+    "unocss": "^0.57.7",
     "usehooks-ts": "^2.9.1",
-    "vite": "^4.3.9",
-    "vite-plugin-dts": "^3.6.3",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0",
+    "vite": "^4.5.1",
+    "vite-plugin-dts": "^3.6.4",
+    "vite-tsconfig-paths": "^4.2.2",
+    "vitest": "^0.34.6",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.7"
   },
   "husky": {
     "hooks": {
