--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "test": "vitest run",
     "test:update": "vitest -u",
     "test:ui": "vitest --ui",
@@ -33,15 +33,15 @@
     "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/css": "^11.11.0",
+    "@emotion/css": "^11.11.2",
     "@emotion/serialize": "^1.1.2",
     "@emotion/utils": "^1.2.1",
     "@hitachivantara/uikit-react-icons": "^5.7.9",
@@ -50,36 +50,36 @@
     "@internationalized/date": "^3.2.0",
     "@mui/base": "^5.0.0-beta.4",
     "@popperjs/core": "^2.11.8",
-    "@react-aria/datepicker": "^3.4.1",
-    "@react-stately/datepicker": "^3.4.1",
-    "@types/react-table": "^7.7.14",
+    "@react-aria/datepicker": "^3.9.0",
+    "@react-stately/datepicker": "^3.9.0",
+    "@types/react-table": "^7.7.18",
     "attr-accept": "^2.2.2",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.10",
     "detect-browser": "^5.3.0",
-    "embla-carousel-react": "^8.0.0-rc07",
+    "embla-carousel-react": "^8.0.0-rc15",
     "lodash": "^4.17.21",
     "notistack": "^2.0.8",
-    "rc-slider": "^10.2.1",
-    "rc-tooltip": "^6.0.1",
+    "rc-slider": "^10.5.0",
+    "rc-tooltip": "^6.1.2",
     "react-color": "^2.19.3",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^8.1.0",
     "react-table": "^7.8.0",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
-    "@playwright/test": "^1.35.0",
-    "@storybook/react": "^7.4.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.2.12",
-    "@types/react-color": "^2.17.6",
-    "@types/react-dom": "^18.2.5",
+    "@playwright/test": "^1.40.1",
+    "@storybook/react": "^7.6.4",
+    "@storybook/testing-library": "^0.2.2",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/react": "^18.2.43",
+    "@types/react-color": "^2.17.10",
+    "@types/react-dom": "^18.2.17",
     "npm-run-all": "^4.1.5",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.0"
+    "vite": "^4.5.1",
+    "vitest": "^0.34.6"
   },
   "files": [
     "dist"
