--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "run-s clean build && npx clean-publish"
@@ -37,10 +37,10 @@
     "@hitachivantara/uikit-styles": "^5.16.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "npm-run-all": "^4.1.5",
-    "vite": "^4.3.9"
+    "vite": "^4.5.1"
   },
   "files": [
     "dist"
