--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -14,17 +14,17 @@
   "main": "src/index.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "dependencies": {
-    "csstype": "^3.1.2"
+    "csstype": "^3.1.3"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "vite": "^4.3.9"
+    "vite": "^4.5.1"
   },
   "files": [
     "dist"
