--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -31,6 +31,7 @@
     "unocss-preset-theme": "^0.11.0"
   },
   "devDependencies": {
+    "@unocss/preset-uno": "^0.57.7",
     "npm-run-all": "^4.1.5",
     "vite": "^4.3.9"
   },
