--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "test": "vitest run",
     "test:update": "vitest -u",
     "test:ui": "vitest --ui",
@@ -33,37 +33,37 @@
     "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^6.0.1",
     "@emotion/css": "^11.11.0",
     "@hitachivantara/uikit-react-core": "^5.38.4",
     "@hitachivantara/uikit-react-icons": "^5.7.9",
     "@hitachivantara/uikit-styles": "^5.16.5",
     "lodash": "^4.17.21",
-    "react-grid-layout": "^1.4.3",
-    "reactflow": "^11.9.4",
+    "react-grid-layout": "^1.4.4",
+    "reactflow": "^11.10.1",
     "uid": "^2.0.2",
     "usehooks-ts": "^2.9.1",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@storybook/react": "^7.4.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@storybook/react": "^7.6.4",
+    "@storybook/testing-library": "^0.2.2",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "@types/react-grid-layout": "^1.3.5",
     "npm-run-all": "^4.1.5",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.0"
+    "vite": "^4.5.1",
+    "vitest": "^0.34.6"
   },
   "files": [
     "dist"
