--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -23,14 +23,14 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "run-s clean build && npx clean-publish"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.2",
     "arquero": "^5.2.0",
     "echarts": "^5.4.2",
@@ -43,11 +43,11 @@
     "@hitachivantara/uikit-react-core": "^5.38.4"
   },
   "devDependencies": {
-    "@storybook/react": "^7.4.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@storybook/react": "^7.6.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "npm-run-all": "^4.1.5",
-    "vite": "^4.3.9"
+    "vite": "^4.5.1"
   },
   "files": [
     "dist"
