--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.49.0",
     "react-leaflet": "^4.2.1",
