--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,6 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.0",
+    "@hitachivantara/uikit-react-code-editor": "*",
+    "@hitachivantara/uikit-react-core": "*",
+    "@hitachivantara/uikit-react-icons": "*",
+    "@hitachivantara/uikit-react-lab": "*",
+    "@hitachivantara/uikit-react-viz": "*",
+    "@hitachivantara/uikit-styles": "*",
     "next": "^14.0.4",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
