build: rename ESM files to .mjs
- .js files should be interpreted as CJS (our packages default to CJS)
- add top-level clean script

validated by publishing packages to verdaccio

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev": "npm run dev -w app",
     "doc": "storybook dev -p 6006",
+    "clean": "lerna run clean",
     "build": "lerna run build",
     "build:doc": "storybook build -o dist --quiet && node scripts/storybook-title",
     "build:app": "vite build app",
