--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -42,12 +42,12 @@
     "access": "public",
     "directory": "package",
     "main": "dist/cjs/index.cjs",
-    "module": "dist/esm/index.js",
+    "module": "dist/esm/index.mjs",
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
         "require": "./dist/cjs/index.cjs",
-        "import": "./dist/esm/index.js"
+        "import": "./dist/esm/index.mjs"
       }
     }
   },
