--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "scripts": {
     "dev": "npm run dev -w apps/app",
     "doc": "storybook dev -p 6006",
+    "nextra": "npm run dev -w apps/docs",
     "clean": "lerna run clean",
     "build": "lerna run build",
     "build:doc": "storybook build -o dist --quiet && node scripts/storybook-title",
     "build:app": "vite build apps/app",
-    "build:nextra": "cd apps/docs && next build",
+    "build:nextra": "npm run build -w apps/docs",
     "test": "lerna run test",
     "test:a11y": "node scripts/a11y-report",
     "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
