--- a/examples/uikit-next/package.json
+++ b/examples/uikit-next/package.json
@@ -11,12 +11,12 @@
     "@emotion/react": "^11.11.1",
     "@hitachivantara/uikit-react-core": "latest",
     "@mui/material": "^5.13.7",
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "next": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "next": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.1.6"
   }
 }
