--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -56,12 +56,12 @@
     "access": "public",
     "directory": "package",
     "main": "dist/cjs/index.cjs",
-    "module": "dist/esm/index.mjs",
+    "module": "dist/esm/index.js",
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
         "require": "./dist/cjs/index.cjs",
-        "import": "./dist/esm/index.mjs"
+        "import": "./dist/esm/index.js"
       }
     }
   },
