--- a/.github/workflows/tests-playwright.yml
+++ b/.github/workflows/tests-playwright.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test --project=${{ matrix.PROJECT }}
 
-      - name: Archive tests report
-        if: ${{ success() || failure() }}
+      - name: Archive Playwright report
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: Playwright report-[${{ matrix.PROJECT }}]
