--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -58,7 +58,7 @@
     "react-google-charts": "^3.0.15",
     "react-outside-click-handler": "^1.3.0",
     "react-plotly.js": "^2.5.1",
-    "react-resize-aware": "^3.1.1",
+    "react-resize-aware": "3.1.1",
     "react-reveal": "^1.2.2",
     "react-table": "6.8.6",
     "react-table-hoc-fixed-columns": "2.3.4"
