--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hv-uikit-react",
+  "type": "module",
   "private": true,
   "description": "The React component library for the Next Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
