--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hitachivantara/uikit-react-pentaho",
   "version": "0.3.0",
+  "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit Pentaho+ React components.",
@@ -72,7 +73,8 @@
     "withoutPublish": true,
     "tempDir": "package",
     "fields": [
-      "main"
+      "main",
+      "type"
     ],
     "files": [
       "tsconfig.json"
