--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hitachivantara/uikit-react-viz",
   "version": "5.13.12",
+  "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "Contributed React visualization components for the NEXT UI Kit.",
@@ -71,7 +72,8 @@
     "withoutPublish": true,
     "tempDir": "package",
     "fields": [
-      "main"
+      "main",
+      "type"
     ],
     "files": [
       "tsconfig.json"
