--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build && npx clean-publish"
