--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,6 @@ jobs:
       RELEASE_TYPE: ${{ github.event.client_payload.type }}
       NPM_CONFIG_PROVENANCE: true
 
-    outputs:
-      published: ${{ steps.check-updates.outputs.published }}
-
     permissions:
       contents: write
       id-token: write
@@ -61,23 +58,20 @@ jobs:
           fi
 
       - name: Check if packages were updated
-        id: check-updates
         run: |
           if grep -q "lerna success published" publish_logs.txt; then
             echo "New packages were published"
-            echo "published=true" >> "$GITHUB_OUTPUT"
           elif grep -q "lerna Command failed" publish_logs.txt; then
             echo "lerna Command failed"
             exit 1
           else
             echo "No packages were updated"
-            echo "published=false" >> "$GITHUB_OUTPUT"
+            exit 1
           fi
 
-  publish-artifacts:
-    name: Publish Artifacts
+  publish-documentation:
+    name: Publish Documentation
     needs: [publish]
-    if: needs.publish.outputs.published == 'true'
     uses: ./.github/workflows/documentation.yml
     secrets: inherit
     with:
@@ -92,7 +86,7 @@ jobs:
   notify-release:
     name: Notify release
     runs-on: ubuntu-latest
-    needs: [publish-artifacts]
+    needs: [publish-documentation]
 
     env:
       DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ github.ref_name }}/
