--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "build:doc:test": "storybook build -o dist --quiet --test",
     "build:app": "vite build apps/app",
     "build:nextra": "npm run build -w apps/docs",
-    "test": "lerna run test",
+    "test": "lerna run test -- --run",
     "test:a11y": "node scripts/a11y.mjs",
-    "coverage": "lerna run coverage",
+    "test:coverage": "lerna run test -- --run --coverage",
     "check": "npm-run-all --parallel prettier lint typecheck",
     "prettier": "prettier --log-level warn --check .",
     "prettier:fix": "prettier --write .",
@@ -64,8 +64,9 @@
     "@storybook/react-vite": "^8.2.4",
     "@storybook/test": "^8.2.4",
     "@storybook/test-runner": "^0.19.1",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
@@ -75,8 +76,8 @@
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
+    "@vitest/coverage-v8": "^2.0.4",
+    "@vitest/ui": "^2.0.4",
     "add": "^2.0.6",
     "arquero": "^5.3.0",
     "axe-playwright": "^2.0.1",
@@ -103,7 +104,7 @@
     "leaflet": "^1.9.4",
     "lerna": "^7.4.2",
     "lint-staged": "^15.2.2",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.2.2",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "pretty-quick": "^4.0.0",
@@ -124,7 +125,7 @@
     "vite": "^5.1.0",
     "vite-plugin-dts": "^3.9.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.2.2",
+    "vitest": "^2.0.4",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
