--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -25,10 +25,8 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
-    "test": "vitest run",
-    "test:update": "vitest -u",
+    "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build && npx clean-publish"
@@ -56,13 +54,12 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitest/ui": "^1.3.1",
     "vite": "^5.1.0",
-    "vitest": "^1.2.2"
+    "vitest": "^2.0.4"
   },
   "files": [
     "dist"
