--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -25,8 +25,7 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
-    "test": "vitest run",
-    "test:update": "vitest -u",
+    "test": "vitest",
     "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
@@ -50,7 +49,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "vite": "^5.1.0",
-    "vitest": "^1.2.2"
+    "vitest": "^2.0.4"
   },
   "files": [
     "dist"
